@@ -6,21 +6,23 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-class ParserTest {
-    private Parser parser;
+class Java21ParserTest {
+    private Java21Parser parser;
 
     @BeforeEach
     void setUp() {
-        parser = new Parser();
+        parser = new Java21Parser();
     }
 
     @Test
     void parseClass() {
-        var tree = parser.parse(readFile("java/Class.java"), false, "");
+        JCTree tree = parser.parse(readFile("java/Class.java"), false, "");
         JCTree file = findChild(tree, "COMPILATION_UNIT");
 
         JCPackageDecl jcPackage = findChild(file, "PACKAGE");
@@ -35,7 +37,7 @@ class ParserTest {
 
     @Test
     void removeDiamondOperatorFromNewClass() {
-        var tree = parser.parse(readFile("java/ClassDiamondOperator.java"), false, "");
+        JCTree tree = parser.parse(readFile("java/ClassDiamondOperator.java"), false, "");
         JCTree file = findChild(tree, "COMPILATION_UNIT");
         JCClassDecl jcClass = findChild(file, "CLASS");
         JCMethodDecl method = findChild(jcClass, "METHOD");
@@ -46,7 +48,7 @@ class ParserTest {
 
     @Test
     void parseOverloadMethods() {
-        var tree = parser.parse(readFile("java/Class.java"), false, "");
+        JCTree tree = parser.parse(readFile("java/Class.java"), false, "");
         JCTree file = findChild(tree, "COMPILATION_UNIT");
         JCClassDecl jcClass = findChild(file, "CLASS");
         List<JCMethodDecl> methods = findChildren(jcClass, "METHOD");
@@ -66,7 +68,7 @@ class ParserTest {
 
     @Test
     void parseConstructor() {
-        var tree = parser.parse(readFile("java/ClassConstructor.java"), false, "");
+        JCTree tree = parser.parse(readFile("java/ClassConstructor.java"), false, "");
         JCTree file = findChild(tree, "COMPILATION_UNIT");
         JCClassDecl jcClass = findChild(file, "CLASS");
         JCMethodDecl constructor = findChild(jcClass, "METHOD");
@@ -78,7 +80,7 @@ class ParserTest {
     class Spring {
         @Test
         void parseGetMethod() {
-            var tree = parser.parse(readFile("spring/RestController.java"), false, "");
+            JCTree tree = parser.parse(readFile("spring/RestController.java"), false, "");
             JCTree file = findChild(tree, "COMPILATION_UNIT");
             JCClassDecl jcClass = findChild(file, "CLASS");
 
@@ -99,10 +101,10 @@ class ParserTest {
     }
 
     private <T extends JCTree> List<T> findChildren(JCTree tree, String type) {
-        return (List<T>) tree.getChildren().stream().filter(e -> e.getType().equals(type)).toList();
+        return (List<T>) tree.getChildren().stream().filter(e -> e.getType().equals(type)).collect(Collectors.toList());
     }
 
     private Path readFile(String path) {
-        return Path.of(getClass().getClassLoader().getResource("fixtures/" + path).getFile());
+        return Paths.get(getClass().getClassLoader().getResource("fixtures/" + path).getFile());
     }
 }
